@@ -10,7 +10,7 @@
  *  Project Homepage: http://www.fourwalledcubicle.com/LUFA.php \n
  *  Development Blog: http://www.fourwalledcubicle.com/blog \n
  *  Discussion Group: http://groups.google.com/group/myusb-support-list \n
- *  SVN Access, Bug Reports and Feature Requests: http://code.google.com/p/lufa-lib/ \n
+ *  Official Releases, SVN Access, Issue Tracker: http://code.google.com/p/lufa-lib/ \n
  *  Git Access: http://github.com/abcminiuser/lufa-lib
  *  Commit RSS: http://github.com/feeds/abcminiuser/commits/lufa-lib/master
  *  Author's Website: http://www.fourwalledcubicle.com \n
